fix: pixel effect on firefox really fixed
152a9c6dad70d23bc2cb8439c6fe1791f4d80988 did not fix the issue.

The problem was actually related to the custom scrolling behaviour in JS file, not the CSS file.

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ html {
 }
 
 /* Fake pixel effect */
-body::after {
+html::after {
 	content: '';
 	position: fixed;
 	top: 0;
